--- a/index.html
+++ b/index.html
@@ -1,127 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calorie Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <style>
-        body {
-            background-color: #2d2d2d;
-            color: #f5f5f5;
-            font-family: 'Arial', sans-serif;
-        }
-        .container {
-            max-width: 600px;
-        }
+      body {
+        background-color: #2d2d2d;
+        color: #f5f5f5;
+        font-family: "Arial", sans-serif;
+      }
+      .container {
+        max-width: 600px;
+      }
     </style>
-</head>
-<body class="flex items-center justify-center min-h-screen bg-gray-800">
+  </head>
+  <body class="flex items-center justify-center min-h-screen bg-gray-800">
     <div class="container bg-gray-900 p-8 rounded-lg shadow-lg">
-        <h1 class="text-2xl font-bold mb-6 text-center">Calorie Calculator</h1>
-        <form id="calorieForm" class="space-y-4">
-            <div class="flex flex-col">
-                <label for="gender" class="mb-2">Gender</label>
-                <select id="gender" class="p-2 rounded bg-gray-800 border border-gray-700">
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                </select>
-            </div>
-            <div class="flex flex-col">
-                <label for="weight" class="mb-2">Weight (kg)</label>
-                <input type="number" id="weight" class="p-2 rounded bg-gray-800 border border-gray-700">
-            </div>
-            <div class="flex flex-col">
-                <label for="height" class="mb-2">Height (cm)</label>
-                <input type="number" id="height" class="p-2 rounded bg-gray-800 border border-gray-700">
-            </div>
-            <div class="flex flex-col">
-                <label for="age" class="mb-2">Age</label>
-                <input type="number" id="age" class="p-2 rounded bg-gray-800 border border-gray-700">
-            </div>
-            <div class="flex flex-col">
-                <label for="activityLevel" class="mb-2">Activity Level</label>
-                <select id="activityLevel" class="p-2 rounded bg-gray-800 border border-gray-700">
-                    <option value="1.2">Sedentary (no workouts)</option>
-                    <option value="1.375">Lightly active (1-3 days workout)</option>
-                    <option value="1.55">Moderately active (3-5 days workout)</option>
-                    <option value="1.725">Very active (6-7 days workout)</option>
-                    <option value="1.9">Extra active (more than 7 days workout)</option>
-                </select>
-            </div>
-            <div class="flex flex-col">
-                <label for="goal" class="mb-2">Goal</label>
-                <select id="goal" class="p-2 rounded bg-gray-800 border border-gray-700">
-                    <option value="maintain">Maintain</option>
-                    <option value="lose">Lose</option>
-                    <option value="gain">Gain</option>
-                </select>
-            </div>
-            <button type="button" onclick="calculateCalories()" class="w-full py-2 mt-4 rounded bg-yellow-500 text-black font-bold">Calculate</button>
-        </form>
-        <div id="results" class="mt-6 p-4 bg-gray-800 rounded-lg hidden">
-            <h2 class="text-xl font-bold mb-4">Results</h2>
-            <p id="bmrResult">BMR: </p>
-            <p id="totalCaloriesResult">Total Calories: </p>
-            <p id="proteinResult">Protein: </p>
-            <p id="fatResult">Fat: </p>
-            <p id="carbsResult">Carbs: </p>
+      <h1 class="text-2xl font-bold mb-6 text-center">Calorie Calculator</h1>
+      <form id="calorieForm" class="space-y-4">
+        <div class="flex flex-col">
+          <label for="gender" class="mb-2">Gender</label>
+          <select
+            id="gender"
+            class="p-2 rounded bg-gray-800 border border-gray-700"
+          >
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
         </div>
+        <div class="flex flex-col">
+          <label for="weight" class="mb-2">Weight (kg)</label>
+          <input
+            type="number"
+            id="weight"
+            class="p-2 rounded bg-gray-800 border border-gray-700"
+          />
+        </div>
+        <div class="flex flex-col">
+          <label for="height" class="mb-2">Height (cm)</label>
+          <input
+            type="number"
+            id="height"
+            class="p-2 rounded bg-gray-800 border border-gray-700"
+          />
+        </div>
+        <div class="flex flex-col">
+          <label for="age" class="mb-2">Age</label>
+          <input
+            type="number"
+            id="age"
+            class="p-2 rounded bg-gray-800 border border-gray-700"
+          />
+        </div>
+        <div class="flex flex-col">
+          <label for="activityLevel" class="mb-2">Activity Level</label>
+          <select
+            id="activityLevel"
+            class="p-2 rounded bg-gray-800 border border-gray-700"
+          >
+            <option value="1.2">Sedentary (no workouts)</option>
+            <option value="1.375">Lightly active (1-3 days workout)</option>
+            <option value="1.55">Moderately active (3-5 days workout)</option>
+            <option value="1.725">Very active (6-7 days workout)</option>
+            <option value="1.9">Extra active (more than 7 days workout)</option>
+          </select>
+        </div>
+        <div class="flex flex-col">
+          <label for="goal" class="mb-2">Goal</label>
+          <select
+            id="goal"
+            class="p-2 rounded bg-gray-800 border border-gray-700"
+          >
+            <option value="maintain">Maintain</option>
+            <option value="lose">Lose</option>
+            <option value="gain">Gain</option>
+          </select>
+        </div>
+        <button
+          type="button"
+          onclick="calculateCalories()"
+          class="w-full py-2 mt-4 rounded bg-yellow-500 text-black font-bold"
+        >
+          Calculate
+        </button>
+      </form>
+      <div id="results" class="mt-6 p-4 bg-gray-800 rounded-lg hidden">
+        <h2 class="text-xl font-bold mb-4">Results</h2>
+        <p id="bmrResult">BMR:</p>
+        <p id="totalCaloriesResult">Total Calories:</p>
+        <p id="proteinResult">Protein:</p>
+        <p id="fatResult">Fat:</p>
+        <p id="carbsResult">Carbs:</p>
+      </div>
     </div>
 
     <script>
-        function calculateCalories() {
-            const gender = document.getElementById('gender').value;
-            const weight = parseFloat(document.getElementById('weight').value);
-            const height = parseFloat(document.getElementById('height').value);
-            const age = parseFloat(document.getElementById('age').value);
-            const activityLevel = parseFloat(document.getElementById('activityLevel').value);
-            const goal = document.getElementById('goal').value;
+      function calculateCalories() {
+        const gender = document.getElementById("gender").value;
+        const weight = parseFloat(document.getElementById("weight").value);
+        const height = parseFloat(document.getElementById("height").value);
+        const age = parseFloat(document.getElementById("age").value);
+        const activityLevel = parseFloat(
+          document.getElementById("activityLevel").value
+        );
+        const goal = document.getElementById("goal").value;
 
-            let bmr;
-            if (gender === 'male') {
-                bmr = 66 + (13.7 * weight) + (5 * height) - (6.8 * age);
-            } else {
-                bmr = 655 + (9.6 * weight) + (1.8 * height) - (4.7 * age);
-            }
-
-            let totalCalories = bmr * activityLevel;
-            if (goal === 'lose') {
-                let reduction = 0.25;  // Start with a 25% reduction
-                let reducedCalories = totalCalories * (1 - reduction);
-                while (reducedCalories < bmr && reduction > 0.05) {
-                    reduction -= 0.05;  // Decrease the reduction by 5% increments
-                    reducedCalories = totalCalories * (1 - reduction);
-                }
-                totalCalories = reducedCalories;
-            } else if (goal === 'gain') {
-                totalCalories *= 1.25;
-            }
-
-            const proteinMultiplier = {
-                '1.2': 0.8,
-                '1.375': 1.2,
-                '1.55': 1.6,
-                '1.725': 2.0,
-                '1.9': 2.2
-            }[activityLevel.toString()];
-
-            const proteinGrams = weight * proteinMultiplier;
-            const proteinCalories = proteinGrams * 4;
-            const fatPercentage = goal === 'lose' ? 0.2 : goal === 'maintain' ? 0.25 : 0.3;
-            const fatCalories = totalCalories * fatPercentage;
-            const fatGrams = fatCalories / 9;
-            const carbsCalories = totalCalories - proteinCalories - fatCalories;
-            const carbsGrams = carbsCalories / 4;
-
-            document.getElementById('bmrResult').innerText = `BMR: ${Math.round(bmr)}`;
-            document.getElementById('totalCaloriesResult').innerText = `Total Calories: ${Math.round(totalCalories)}`;
-            document.getElementById('proteinResult').innerText = `Protein: ${Math.round(proteinGrams)} grams (${Math.round(proteinCalories)} calories)`;
-            document.getElementById('fatResult').innerText = `Fat: ${Math.round(fatGrams)} grams (${Math.round(fatCalories)} calories)`;
-            document.getElementById('carbsResult').innerText = `Carbs: ${Math.round(carbsGrams)} grams (${Math.round(carbsCalories)} calories)`;
-
-            document.getElementById('results').classList.remove('hidden');
+        let bmr;
+        if (gender === "male") {
+          bmr = 66 + 13.7 * weight + 5 * height - 6.8 * age;
+        } else {
+          bmr = 655 + 9.6 * weight + 1.8 * height - 4.7 * age;
         }
+
+        let totalCalories = bmr * activityLevel;
+        if (goal === "lose") {
+          let reduction = 0.25; // Start with a 25% reduction
+          let reducedCalories = totalCalories * (1 - reduction);
+          while (reducedCalories < bmr && reduction > 0.05) {
+            reduction -= 0.05; // Decrease the reduction by 5% increments
+            reducedCalories = totalCalories * (1 - reduction);
+          }
+          totalCalories = reducedCalories;
+        } else if (goal === "gain") {
+          totalCalories *= 1.25;
+        }
+
+        const proteinMultiplier = {
+          1.2: 0.8,
+          1.375: 1.2,
+          1.55: 1.6,
+          1.725: 2.0,
+          1.9: 2.2,
+        }[activityLevel.toString()];
+
+        const proteinGrams = weight * proteinMultiplier;
+        const proteinCalories = proteinGrams * 4;
+
+        // Adjust fat percentage based on the goal
+        const fatPercentage =
+          goal === "lose" ? 0.3 : goal === "maintain" ? 0.25 : 0.2;
+        const fatCalories = totalCalories * fatPercentage;
+        const fatGrams = fatCalories / 9;
+
+        const carbsCalories = totalCalories - proteinCalories - fatCalories;
+        const carbsGrams = carbsCalories / 4;
+
+        document.getElementById("bmrResult").innerText = `BMR: ${Math.round(
+          bmr
+        )}`;
+        document.getElementById(
+          "totalCaloriesResult"
+        ).innerText = `Total Calories: ${Math.round(totalCalories)}`;
+        document.getElementById(
+          "proteinResult"
+        ).innerText = `Protein: ${Math.round(proteinGrams)} grams (${Math.round(
+          proteinCalories
+        )} calories)`;
+        document.getElementById("fatResult").innerText = `Fat: ${Math.round(
+          fatGrams
+        )} grams (${Math.round(fatCalories)} calories)`;
+        document.getElementById("carbsResult").innerText = `Carbs: ${Math.round(
+          carbsGrams
+        )} grams (${Math.round(carbsCalories)} calories)`;
+
+        document.getElementById("results").classList.remove("hidden");
+      }
     </script>
-</body>
+  </body>
 </html>
